vpc.yaml
Description: >
    This template deploys a VPC with a pair of public and private subnets spread 
    across two Availabilty Zones. It deploys an Internet Gateway, with a default 
    route on the public subnets. It deploys a pair of NAT Gateways (one in each AZ), 
    and default routes for them in the private subnets.

Parameters:

    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String

    PublicSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
        Type: String
        Default: 10.110.2.0/24

    PublicSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
        Type: String
        Default: 10.110.4.0/24

    PublicSubnet3CIDR:
        Description: Please enter the IP range (CIDR notation) for the public subnet in the third Availability Zone
        Type: String
        Default: 10.110.6.0/24

    PrivateSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
        Type: String
        Default: 10.110.8.0/24

    PrivateSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
        Type: String
        Default: 10.110.10.0/24

    PrivateSubnet3CIDR:
        Description: Please enter the IP range (CIDR notation) for the private subnet in the third Availability Zone
        Type: String
        Default: 10.110.12.0/24

    VpcCIDR: 
        Description: Please enter the IP range (CIDR notation) for this VPC
        Type: String
        Default: 10.110.0.0/16

Resources:

    VPC: 
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            Tags: 
                - Key: Name 
                  Value: !Ref EnvironmentName
            
    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName
            
    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs ]
            CidrBlock: !Ref PublicSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

    PublicSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs ]
            CidrBlock: !Ref PublicSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

    PublicSubnet3: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 2, !GetAZs ]
            CidrBlock: !Ref PublicSubnet3CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ3)

    PrivateSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs ]
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

    PrivateSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs ]
            CidrBlock: !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

    PrivateSubnet3: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 2, !GetAZs ]
            CidrBlock: !Ref PrivateSubnet3CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ3)

    NatGateway1EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties: 
            Domain: vpc

    NatGateway2EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
            Domain: vpc

    NatGateway3EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
            Domain: vpc

    NatGateway1: 
        Type: AWS::EC2::NatGateway
        Properties: 
            AllocationId: !GetAtt NatGateway1EIP.AllocationId
            SubnetId: !Ref PublicSubnet1

    NatGateway2: 
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGateway2EIP.AllocationId
            SubnetId: !Ref PublicSubnet2

    NatGateway3: 
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGateway3EIP.AllocationId
            SubnetId: !Ref PublicSubnet3

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Routes

    DefaultPublicRoute: 
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties: 
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet1

    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet2
    
    PublicSubnet3RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet3

    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ1)

    DefaultPrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway1

    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            SubnetId: !Ref PrivateSubnet1

    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ2)

    DefaultPrivateRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway2

    PrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            SubnetId: !Ref PrivateSubnet2

    PrivateRouteTable3:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ3)

    DefaultPrivateRoute3:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable3
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway3

    PrivateSubnet3RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable3
            SubnetId: !Ref PrivateSubnet3

    ECSCluster:
        Type: AWS::ECS::Cluster
        Properties:
            ClusterName: !Sub "${EnvironmentName}-ecs-cluster"
            Tags:
                - Key: Name
                  Value: !Sub "${EnvironmentName}-ecs-cluster"

  # This role is required by ECS tasks to pull container images, publish container
  # logs to CloudWatch, as well as retrieve secrets from the Secrets Manager
  # The managed policy arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
  # is equivalent to the below inline policy with the exception of the secretsmanager action
    ECSTaskExecutionRole:
        Type: AWS::IAM::Role
        Properties:
            RoleName: !Sub "${EnvironmentName}-ecs-task-execution-role"
            AssumeRolePolicyDocument:
                Statement:
                    - Effect: Allow
                      Principal:
                        Service: [ecs-tasks.amazonaws.com]
                      Action: ["sts:AssumeRole"]
            Policies:
                - PolicyName: !Sub "${EnvironmentName}-ecs-task-execution-role-policy"
                  PolicyDocument:
                    Statement:
                    - Effect: Allow
                      Action:
                            - "ecr:GetAuthorizationToken"
                            - "ecr:BatchCheckLayerAvailability"
                            - "ecr:GetDownloadUrlForLayer"
                            - "ecr:BatchGetImage"
                            - "logs:CreateLogStream"
                            - "logs:PutLogEvents"
                            - "secretsmanager:GetSecretValue"
                      Resource: "*"
            Tags:
                - Key: Name
                  Value: !Sub "${EnvironmentName}-ecs-task-execution-role"


    # This role allows ECS tasks to access other AWS resources / APIs
    ECSTaskRole:
        Type: AWS::IAM::Role
        Properties:
            RoleName: !Sub "${EnvironmentName}-ecs-task-role"
            AssumeRolePolicyDocument:
                Version: 2012-10-17
                Statement:
                  - Effect: Allow
                    Principal:
                      Service:
                        - batch.amazonaws.com
                        - ecs-tasks.amazonaws.com
                        - ecs.amazonaws.com
                        - ec2.amazonaws.com
                    Action:
                      - 'sts:AssumeRole'
            Path: '/'
            Tags:
                - Key: Name
                  Value: !Sub "${EnvironmentName}-ecs-task-role"

    TaskPolicy0:
      Type: 'AWS::IAM::Policy'
      Properties:
        PolicyName: ecr-readonly
        PolicyDocument:
          Version: 2012-10-17
          Statement:
            - Effect: Allow
              Action:
                - 'ecr:GetAuthorizationToken'
                - 'ecr:BatchCheckLayerAvailability'
                - 'ecr:GetDownloadUrlForLayer'
                - 'ecr:GetRepositoryPolicy'
                - 'ecr:DescribeRepositories'
                - 'ecr:ListImages'
                - 'ecr:DescribeImages'
                - 'ecr:BatchGetImage'
              Resource: '*'
        Roles:
          - !Ref ECSTaskRole
  
    # This allows autoscaling to be performed on service
    AutoScalingRole:
        Type: AWS::IAM::Role
        Properties:
            RoleName: !Sub "${EnvironmentName}-auto-scaling-role"
            AssumeRolePolicyDocument:
                Statement:
                    - Effect: Allow
                      Principal:
                        Service: [application-autoscaling.amazonaws.com]
                      Action: ["sts:AssumeRole"]
            Policies:
                - PolicyName: !Sub "${EnvironmentName}-auto-scaling-policy"
                  PolicyDocument:
                    Version: "2012-10-17"
                    Statement:
                        - Effect: Allow
                          Action:
                            - ecs:DescribeServices
                            - ecs:UpdateService
                            - cloudwatch:PutMetricAlarm
                            - cloudwatch:DescribeAlarms
                            - cloudwatch:DeleteAlarms
                          Resource:
                            - "*"
            Tags:
                - Key: Name
                  Value: !Sub "${EnvironmentName}-ecs-autoscaling-role"

    BlueGreenDeployRole:
        Type: AWS::IAM::Role
        Properties:
            RoleName: !Sub "${EnvironmentName}-codedeploy-role"
            AssumeRolePolicyDocument:
                Statement:
                - Action:
                  - sts:AssumeRole
                  Effect: Allow
                  Principal:
                    Service:
                    - codedeploy.amazonaws.com
                Version: '2012-10-17'
            Policies:
                - PolicyName: !Sub "${EnvironmentName}-codedeploy-bg-policy"
                  PolicyDocument:
                    Version: "2012-10-17"
                    Statement:
                        - Effect: Allow
                          Action:
                            - ecs:DescribeServices
                            - ecs:UpdateService
                            - cloudwatch:PutMetricAlarm
                            - cloudwatch:DescribeAlarms
                            - cloudwatch:DeleteAlarms
                            - ecs:CreateTaskSet
                            - ecs:UpdateServicePrimaryTaskSet
                            - ecs:DeleteTaskSet
                            - elasticloadbalancing:DescribeTargetGroups
                            - elasticloadbalancing:DescribeListeners
                            - elasticloadbalancing:ModifyListener
                            - elasticloadbalancing:DescribeRules
                            - elasticloadbalancing:ModifyRule
                            - lambda:InvokeFunction
                            - cloudwatch:DescribeAlarms
                            - sns:Publish
                            - s3:GetObject
                            - s3:GetObjectMetadata
                            - s3:GetObjectVersion
                          Resource:
                            - "*"
                        - Action: ["iam:PassRole"]
                          Resource: [ !GetAtt ECSTaskExecutionRole.Arn ]
                          Effect: Allow
                        - Action: ["iam:PassRole"]
                          Resource: [ !GetAtt ECSTaskRole.Arn ]
                          Effect: Allow
            ManagedPolicyArns:
            - arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole

    LogGroup:
        Type: AWS::Logs::LogGroup
        Properties:
            LogGroupName: !Sub "${EnvironmentName}"
            RetentionInDays: 14

Outputs: 

    VPC: 
        Description: A reference to the created VPC
        Value: !Ref VPC

    PublicSubnets:
        Description: A list of the public subnets
        Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2, !Ref PublicSubnet3 ]]

    PrivateSubnets:
        Description: A list of the private subnets
        Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2, !Ref PrivateSubnet3 ]]

    ECSTaskExecutionRole:
        Description: A reference to ECS Task Execute Role
        Value: !GetAtt ECSTaskExecutionRole.Arn

    ECSCluster:
        Description: A reference to ECS Cluster
        Value: !Ref ECSCluster

    ECSTaskRole:
        Description: A reference to ECS Task role to be used by all tasks
        Value: !GetAtt ECSTaskRole.Arn

    AutoScalingRole:
        Description: A reference to ECS Auto scaling role to be used by service
        Value: !GetAtt AutoScalingRole.Arn

    BlueGreenDeployRole:
        Description: A blue green deployment role
        Value: !GetAtt BlueGreenDeployRole.Arn

    LogGroup:
        Description: A reference to Log group where all logs will be shipped
        Value: !Ref LogGroup
